working on the exceptions